--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>pw_portal</title>
   </head>
   <body>
+    <!-- App.vue的template代码会被嵌入到这个div中 -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
